syntax = "proto3";

package image;

option go_package="./imagepb";

message ImageInfo {
    string image_name = 1;
}

message UploadImageRequest {
    oneof data {
      ImageInfo info = 1;
      bytes chunk_data = 2;
    };
}

message UploadImageResponse {
    string id = 1;
    uint32 size = 2;
}

service ImageService {
    //rpc GetListOfFiles(UploadImageRequest) returns (stream UploadImageResponse) {};
    rpc ImageLoadOnServer(stream UploadImageRequest) returns (UploadImageResponse) {};
    //rpc ImageGetFromServer(UploadImageRequest) returns (stream UploadImageResponse) {};
}
